# ffonons

./: .gitattributes  .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
.github/workflows/: gh-pages.yml  lint.yml  test-scripts.yml  test.yml
data/: mp-ids-with-phonons.yml
data/phonon-db/: 2024-08-14-togo-vasp-params.csv.bz2  map-mp-id-togo-id.csv  togo-vasp-params.csv  togo-vasp-params.csv.bz2
ffonons/: __init__.py  enums.py  fetch_db_data.py  io.py  joint_plots.py  last_peak_analysis.py  load_all_docs.py  metrics.py  phonon.py  plots.py  run_phonon_maker.py
ffonons/analysis/: __init__.py  band_width.py  check_phonondb_vasp_converged.py  dos_mae.py  imag_freq_conf_mat.py  imaginary_modes.py  last_peak.py  max_freq.py  metrics_table.py  plot_dos_bs.py  plot_dos_bs_mpl.py  plot_dos_bs_plotly.py  violin_max_freq_rel.py  violin_min_max_freqs.py
ffonons/dbs/: __init__.py  fetch_phonondb_docs.py  mp.py  phonondb.py
scripts/: fetch_phonondb_docs.py  run_phonon_maker.py
scripts/analysis/: check_phonondb_vasp_converged.py  dos_mae.py  imag_freq_conf_mat.py  max_freq.py  metrics_table.py  plot_dos_bs_mpl.py  plot_dos_bs_plotly.py  ufscv_temperature_plots.py  violin_min_max_freqs.py
site/: package.json  svelte.config.js
site/src/: app.html
site/src/figs/: ffonon-imag-clf-table-tol=0.01.svelte  ffonon-imag-gamma-clf-table-tol=0.01.svelte  ffonon-metrics-table-tol=0.01.svelte  ffonon-regr-metrics-table-tol=0.01.svelte  metrics-table.svelte
site/src/figs/mace-mp0-phonondb/: mp-10429-dos-pbe-vs-mace-y7uhwpje.svelte  mp-11695-dos-pbe-vs-mace-y7uhwpje.svelte  mp-13602-dos-pbe-vs-mace-y7uhwpje.svelte  mp-14023-dos-pbe-vs-mace-y7uhwpje.svelte  mp-15520-dos-pbe-vs-mace-y7uhwpje.svelte  mp-15782-dos-pbe-vs-mace-y7uhwpje.svelte  mp-16742-dos-pbe-vs-mace-y7uhwpje.svelte  mp-17196-dos-pbe-vs-mace-y7uhwpje.svelte  mp-17651-dos-pbe-vs-mace-y7uhwpje.svelte  mp-17885-dos-pbe-vs-mace-y7uhwpje.svelte  mp-17894-dos-pbe-vs-mace-y7uhwpje.svelte  mp-21836-dos-pbe-vs-mace-y7uhwpje.svelte  mp-23029-dos-pbe-vs-mace-y7uhwpje.svelte  mp-23202-dos-pbe-vs-mace-y7uhwpje.svelte  mp-23465-dos-pbe-vs-mace-y7uhwpje.svelte  mp-23660-dos-pbe-vs-mace-y7uhwpje.svelte  mp-23980-dos-pbe-vs-mace-y7uhwpje.svelte  mp-27033-dos-pbe-vs-mace-y7uhwpje.svelte  mp-27214-dos-pbe-vs-mace-y7uhwpje.svelte  mp-27281-dos-pbe-vs-mace-y7uhwpje.svelte  mp-2739-dos-pbe-vs-mace-y7uhwpje.svelte  mp-27425-dos-pbe-vs-mace-y7uhwpje.svelte  mp-2758-dos-pbe-vs-mace-y7uhwpje.svelte  mp-2798-dos-pbe-vs-mace-y7uhwpje.svelte  mp-2892-dos-pbe-vs-mace-y7uhwpje.svelte  mp-28995-dos-pbe-vs-mace-y7uhwpje.svelte  mp-29213-dos-pbe-vs-mace-y7uhwpje.svelte  mp-2998-dos-pbe-vs-mace-y7uhwpje.svelte  mp-30004-dos-pbe-vs-mace-y7uhwpje.svelte  mp-30905-dos-pbe-vs-mace-y7uhwpje.svelte  mp-3107-dos-pbe-vs-mace-y7uhwpje.svelte  mp-31276-dos-pbe-vs-mace-y7uhwpje.svelte  mp-31292-dos-pbe-vs-mace-y7uhwpje.svelte  mp-3193-dos-pbe-vs-mace-y7uhwpje.svelte  mp-3472-dos-pbe-vs-mace-y7uhwpje.svelte  mp-35659-dos-pbe-vs-mace-y7uhwpje.svelte  mp-3978-dos-pbe-vs-mace-y7uhwpje.svelte  mp-3996-dos-pbe-vs-mace-y7uhwpje.svelte  mp-4511-dos-pbe-vs-mace-y7uhwpje.svelte  mp-4651-dos-pbe-vs-mace-y7uhwpje.svelte  (+57 more)
site/src/routes/: +error.svelte  +layout.svelte  +page.svelte
site/src/routes/mp-[slug]/: +page.svelte  +page.ts
tests/: __init__.py  conftest.py  test_enums.py  test_init.py  test_io.py  test_metrics.py  test_plots.py
tests/dbs/: test_mp.py  test_phonondb.py
tests/files/mp/: mp-149-Si2.json.lzma
tests/files/phonondb/: mp-2789-N12O24-pbe.json.lzma  mp-661-Al2N2-mace-y7uhwpje.json.xz
tests/io/: test_get_df_summary.py  test_get_gnome_pmg_structures.py  test_load_pymatgen_phonon_docs.py  test_update_key_name.py
uni_mace/: __init__.py  phonon.py  plots.py
