[project]
name = "ffonons"
version = "0.1.0"
description = "A Python package for benchmarking phonon predictions from ML force fields"
authors = [{ name = "Janosh Riebesell", email = "janosh.riebesell@gmail.com" }]
readme = "readme.md"
license = { file = "license" }
keywords = [
  "chemistry",
  "force-fields",
  "interatomic-potentials",
  "machine-learning",
  "materials-science",
  "phonons",
  "physics",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
  "IPython>=8.20",
  "atomate2[phonons]>=0.0.14",
  "bs4>=0.0.2",
  "matplotlib>=3.6.2",
  "mp-api>=0.41",
  "numpy>=1.26",
  "pandas>=2.0.0",
  "plotly>=5.22",
  "pymatgen>=2024.7.18",
  "pymatviz[export-figs,df-pdf-export]>=0.10.1",
  "scikit-learn>=1.4",
  "scipy>=1.13",
  "tqdm>=4.66",
]

[project.urls]
Homepage = "https://janosh.github.io/ffonons"
Repo = "https://github.com/janosh/ffonons"
Package = "https://pypi.org/project/ffonons"

[project.optional-dependencies]
test = ["pytest-cov>=4", "pytest>=8"]
models = ["chgnet>=0.3.8", "mace-torch>=0.3.6", "matgl>=1.1.3", "sevenn>=0.9.3"]

[tool.setuptools.packages.find]
include = ["ffonons*"]

[tool.distutils.bdist_wheel]
universal = true

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN101",  # self missing annotation
  "ANN102",  # cls missing annotation
  "ANN401",  # Dynamically typed expressions (typing.Any) disallowed
  "BLE001",  # do not catch blind except
  "C408",    # unnecessary-collection-call
  "C901",    # too-complex
  "COM812",  # missing trailing comma
  "D205",    # blank-line-after-summary
  "E731",    # lambda-assignment
  "EM101",
  "EM102",
  "ERA",     # commented-out-code
  "FIX002",
  "ISC001",
  "PD010",   # pandas prefer pivot_table
  "PERF203", # try-except-in-loop
  "PLR0912", # too many branches
  "PLR0913", # too many arguments
  "PLR0915", # too many statements
  "PTH",     # prefer pathlib to os.path
  "T201",
  "TD",
  "TRY003",  # Avoid specifying long messages outside the exception class
]
pydocstyle.convention = "google"
isort.split-on-trailing-comma = false

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["D", "INP001", "PLR2004", "S101"]
"scripts/*" = ["INP001"]

[tool.pyright]
typeCheckingMode = "off"
reportPossiblyUnboundVariable = true
reportUnboundVariable = true

[tool.codespell]
ignore-words-list = ["MAPE"]
